Rlecomte/tdi 43679 pubsub output (#330)
* TDI-41442 : migrating pubsub to TCK

first commit

* TDI-41442 : migrating pubsub to TCK

config ok

* feat(TDI-42349): prevent insert operation use temp table (#219)

* feat(TDI-42349): prevent insert operation use temp table

* feat(TDI-42349): remove unused imports

* fix(TDI-43114): handle incoming null values in CouchbaseOuput (#227)

* fix(TDI-43114): handle incoming null values in CouchbaseOuput

* fix(TDI-43115): handle BYTES type in CouchbaseOuput (#228)

* fix(TDI-43115): handle BYTES type in CouchbaseOuput

* fix(TDI-43097):remove shutdown hook for snowflake (#225)

* fix(TDI-42350): Use custom azureblob icons (#154)

* fix(TDI-42350): Use custom azureblob icons

* feat(TDI-42350): Use correct name of icons

* feat(TDI-42350): Use correct icons in related annotation

* fix(TDI-42975): fix issues found in studio testing (#196)

* fix(TDI-42795): force avro scope for studio
* fix(TDI-42795): handle blobName with space(s)
I should have used URLEncoder to encode the whole resource but fully
encoded resources makes authentication fail when using SharedKey auth
method. Weird because azure-js encodes with encodeURI method.
* fix(TDI-42795): hide empty file format configurations
* feat(TDI-42795): add studio icons for Azure-dls-gen2
* feat(TDI-42795): rename icons for matching components names
* feat(TDI-42795): comment why config options are hidden
- format and copyright issues
* fix(TDI-42795): fix copyright in wrong place
* fix(TDI-42795): fix service classes - should not be serializables
* fix(TDI-42795): fix incorrect logging
* fix(TDI-42795): do not cache filesystems
* chore(TDI-42795): change logging level and fix logging error
* chore(TDI-42795): skip empty record on output
* chore(TDI-42795): assign null to empty value in csv converter
* chore(TDI-42795): remove extra logging
* chore(TDI-42795): change logging level and code cleanup
* chore(TDI-42795): fix logg